# rev2fwd-il

./: .gitignore  .gitmodules  =0.1.9  =4.3.1  README.md  aggregate_stats.py  environment.yml  nohup.out  pyproject.toml  temp_script.py  temp_script_2.py  tmp_analyze.py  tmp_merge.py
debug/: advantage_filter_dev.md  collect_iter3_rollout.sh  critic_debug.py  critic_model_dev.md  eval_critic_on_reversed_B.py  eval_critic_visual.py  filter_reversed_B_by_advantage.py  inspect_critic_data.py  prepare_critic_data.py  train_critic.py  visualize_advantage_filter.py
docs/: IMAGE_FIX_COMPLETE.md  QUICK_FIX_REFERENCE.md  WHY_ACTION_CHUNK_WAS_WRONG.md  action_analysis_report.md  action_chunk_visualization.md  exp17_preliminary_report_20260323.md  image_normalization_analysis.md  image_normalization_fix_summary.md  paper.md  weekly_report_20260319.md
eval_results/: eval_results.json
scripts/: 01_debug_expert_B_one_episode.py  10_collect_B_reverse_rollouts.py  11_replay_B_episode.py  12_collect_B_with_images.py  13_inspect_B_images.py  14_collect_B_with_goal_actions.py  1_collect_data.py  1_collect_data_nut_thread.py  1_collect_data_pick_place.py  20_make_A_forward_dataset.py  21_replay_A_episode.py  22_make_A_forward_dataset_with_images.py  23_make_A_forward_with_goal_actions.py  2_inspect_data.py  30_train_A_bc.py  31_train_A_diffusion.py  34_train_B_diffusion_goal.py  3_make_forward_data.py  40_eval_A.py  41_test_A_diffusion_visualize.py  42_eval_diffusion_v2.py  4_train_diffusion.py  5_eval_diffusion.py  hf_sync.py  test_action_chunk_viz.py  test_image_normalization_fix.py  (+2 more)
(+249 files in other folders)
